	  representable in whole hours. (Severity: low; Security impact: low)
	  Thanks to IP Fabrics, Inc.
	* Added -fincludes-quoted to asn1c to generate #includes in "double"
	  instead of <angle> quotes.
	* PER encoding correctness fix. (Severity: high; Security impact: low)
	  Reported by Grzegorz Aksamit.
	* ENUMERATED extension values check relaxed. Reported by Gabriel Burca.

0.9.22:	2008-Nov-19

	* Added -pdu=all and -pdu=<type> switches to asn1c.
	* Added PER support for most known-multiplier string types:
	  IA5String, VisibleString, PrintableString, BMPString, UniversalString;
	  useful types: GeneralizedTime, UTCTime, ObjectDescriptor;
	  as well as REAL and OBJECT IDENTIFIER.
	  TODO: SET type.
	* Added PER support for extensions in SEQUENCE.
	* Multiple enhancements by Daniele Varrazzo <daniele.varrazzo@gmail.com>
	* Fixed explicit tagging of an in-lined constructed type.
	  (Severity: low; Security impact: none).
	* Memory leak fixed in SET OF / SEQUENCE OF when wrong encoding
	  is encountered. (Severity: medium; Security impact: low)
	* Fixed extensibility handling of second SEQUENCE production.
	  (Severity: low; Security impact: none)
	* Added DEFAULT handling for known multiplier string.
	* Added a sample OMA ULP decoder (./examples/sample.source.ULP).
	* Added full-width 32-bit integer encoding support in PER.
	* Fixed 1-byte OOB write issue with non-standard and Windows
	  memory allocators (Severity: low; Security impact: medium).
	  Reported by Sheng Yu.

0.9.21:	2006-Sep-17

	* skeletons/standard-modules directory is now used for standard types.
	* Fixed class field access problem (Test case 98)
	  (Severity: medium; Security impact: none)
	* Refactored Information Object Classes parsing.
	* Refactored Parameterization support.
	* [typedef enum foo {}] foo_e; is now e_foo, see #1287989
	* Refactored ValueSetTypeAssignment parsing.
	* asn-decoder-template.c renamed into converter-sample.c